--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --cor-de-fundo: #1e1e1e;
     --verde: #6FFF57;
     --branco: #FFFFFF;
-    --branco-ativo: #3A375E;
+    --botao-ativo: #3A375E;
     --botao-inativo: rgba(58,55,,94,0.5);
     --texto-fundo: rgba(58,55,94,0.3);
   }
@@ -23,4 +23,43 @@
    justify-content: center;
    align-items: center;
 
+}
+.titulo-principal{
+   text-align: center;
+   width: 100%;
+   font-size: 32px;
+}
+.botao{
+   background-color: var(--botao-inativo);
+   color: white;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   padding: 1em;
+   font-size: 18px;
+   width: 100%;
+   border-bottom: 4px solid var(--botao-ativo);
+   border-left: 2px solid var((--botao-ativo));
+   border-right: 2px solid var(--botao-ativo);
+}
+.botoes{
+   display: block;
+}
+.botao:first-child{
+   border-radius: 20px 20px 0 0;
+}
+.botao:last-child{
+   border-radius: 0 0 20px 20px;
+}
+@media screen and (min-width: 700px){
+   .botoes{
+      display: flex;
+   }
+   .botao:last-child{
+      border-radius: 0 20px 20px 0;
+   }
+      .botao:first-child{
+         border-radius: 20px 0 0 20px;
+      
+      }
 }
